provisioning/infrastructure/110_realms/base/traefik-forward-auth/middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: traefik-forward-auth

spec:
  forwardAuth:
    address: http://traefik-forward-auth-svc.keycloak-operator.svc.cluster.local/
    trustForwardHeader: true
    authResponseHeaders:
    - X-Forwarded-User
