provisioning/infrastructure/110_realms/base/traefik-forward-auth/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik-forward-auth
  labels:
    app: traefik-forward-auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik-forward-auth
  template:
    metadata:
      labels:
        app: traefik-forward-auth
        # annotations:
        #   container.apparmor.security.beta.kubernetes.io/traefik-forward-auth: runtime/default
    spec:
      containers:
      - name: traefik-forward-auth
        # image: thomseddon/traefik-forward-auth:2.2.0-arm64
        image: joernarne/traefik-forward-auth:3.1.0
        # image: mesosphere/traefik-forward-auth:3.1.0
        imagePullPolicy: Always
        securityContext:
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 65534
          runAsGroup: 65534
          capabilities:
            drop:
            - ALL
        livenessProbe:
          failureThreshold: 3
          tcpSocket:
            port: 4181
          initialDelaySeconds: 10
          periodSeconds: 10
        resources:
          limits:
            memory: '10Mi'
            cpu: '100m'
        ports:
        - name: http
          containerPort: 4181
