provisioning/infrastructure/110_realms/base/traefik-forward-auth/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-forward-auth
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
    traefik.ingress.kubernetes.io/router.middlewares: op-keycloak-traefik-forward-auth@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
  - host: << example.com >>
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: traefik-forward-auth-svc
            port:
              number: 80
  tls:
  - hosts:
    - << example.com >>
    secretName: << example.com >>
